// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`navigation-contract matrix snapshot row-1: Adult owner, no family links, Study 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "chrome": {
    "modeSwitcher": "hidden",
    "proxyBanner": "hidden",
  },
  "diagnostic": {
    "activeProfileId": "00000000-0000-7000-a000-000000000101",
    "effectiveAppContext": "study",
    "isFamilyCapable": false,
    "isParentProxy": false,
    "linkedChildIds": [],
    "reason": "explicit-study",
    "role": "owner",
    "shape": "study",
  },
  "effectiveAppContext": "study",
  "gates": {
    "progressScope": "self",
    "sessionIsOwner": true,
    "showAccommodationChildEditor": false,
    "showAccountSecurity": true,
    "showAddChild": true,
    "showBilling": true,
    "showCelebrationsChildEditor": false,
    "showExportDelete": true,
    "showFamilyChildActivity": false,
    "showFamilyHome": false,
    "showInlineStudyInvite": false,
    "showLearnThisToo": false,
    "showLearningActions": true,
    "showProgressProfilePicker": false,
    "showRemoveFamilyMember": false,
  },
  "home": {
    "iconName": "School",
    "screen": "LearnerHome",
    "titleKey": "tabs.myLearning",
  },
  "isFamilyCapable": false,
  "isParentProxy": false,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "study",
    "profileId": "00000000-0000-7000-a000-000000000101",
  },
  "shape": "study",
  "visibleTabs": [
    "home",
    "library",
    "more",
    "progress",
  ],
}
`;

exports[`navigation-contract matrix snapshot row-2: Adult owner, no family links, chose Family intent 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "chrome": {
    "modeSwitcher": "hidden",
    "proxyBanner": "hidden",
  },
  "diagnostic": {
    "activeProfileId": "00000000-0000-7000-a000-000000000101",
    "effectiveAppContext": "study",
    "isFamilyCapable": false,
    "isParentProxy": false,
    "linkedChildIds": [],
    "reason": "family-intent-without-family-links",
    "role": "owner",
    "shape": "study",
  },
  "effectiveAppContext": "study",
  "gates": {
    "progressScope": "self",
    "sessionIsOwner": true,
    "showAccommodationChildEditor": false,
    "showAccountSecurity": true,
    "showAddChild": true,
    "showBilling": true,
    "showCelebrationsChildEditor": false,
    "showExportDelete": true,
    "showFamilyChildActivity": false,
    "showFamilyHome": false,
    "showInlineStudyInvite": false,
    "showLearnThisToo": false,
    "showLearningActions": true,
    "showProgressProfilePicker": false,
    "showRemoveFamilyMember": false,
  },
  "home": {
    "iconName": "School",
    "screen": "LearnerHome",
    "titleKey": "tabs.myLearning",
  },
  "isFamilyCapable": false,
  "isParentProxy": false,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "study",
    "profileId": "00000000-0000-7000-a000-000000000101",
  },
  "shape": "study",
  "visibleTabs": [
    "home",
    "library",
    "more",
    "progress",
  ],
}
`;

exports[`navigation-contract matrix snapshot row-3: Adult owner, family-capable, Study 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "chrome": {
    "modeSwitcher": "global-header",
    "proxyBanner": "hidden",
  },
  "diagnostic": {
    "activeProfileId": "00000000-0000-7000-a000-000000000102",
    "effectiveAppContext": "study",
    "isFamilyCapable": true,
    "isParentProxy": false,
    "linkedChildIds": [
      "00000000-0000-7000-a000-000000000201",
    ],
    "reason": "explicit-study",
    "role": "owner",
    "shape": "study",
  },
  "effectiveAppContext": "study",
  "gates": {
    "progressScope": "self",
    "sessionIsOwner": true,
    "showAccommodationChildEditor": false,
    "showAccountSecurity": true,
    "showAddChild": true,
    "showBilling": true,
    "showCelebrationsChildEditor": false,
    "showExportDelete": true,
    "showFamilyChildActivity": false,
    "showFamilyHome": false,
    "showInlineStudyInvite": true,
    "showLearnThisToo": false,
    "showLearningActions": true,
    "showProgressProfilePicker": false,
    "showRemoveFamilyMember": false,
  },
  "home": {
    "iconName": "School",
    "screen": "LearnerHome",
    "titleKey": "tabs.myLearning",
  },
  "isFamilyCapable": true,
  "isParentProxy": false,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "study",
    "profileId": "00000000-0000-7000-a000-000000000102",
  },
  "shape": "study",
  "visibleTabs": [
    "home",
    "library",
    "more",
    "progress",
  ],
}
`;

exports[`navigation-contract matrix snapshot row-4: Adult owner, family-capable, explicit Family 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": true,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": true,
    "home": true,
    "library": false,
    "more/account": true,
    "progress": true,
    "progress/saved": false,
    "recaps": true,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": true,
  },
  "chrome": {
    "modeSwitcher": "global-header",
    "proxyBanner": "hidden",
  },
  "diagnostic": {
    "activeProfileId": "00000000-0000-7000-a000-000000000102",
    "effectiveAppContext": "family",
    "isFamilyCapable": true,
    "isParentProxy": false,
    "linkedChildIds": [
      "00000000-0000-7000-a000-000000000201",
    ],
    "reason": "explicit-family",
    "role": "owner",
    "shape": "family",
  },
  "effectiveAppContext": "family",
  "gates": {
    "progressScope": "children",
    "sessionIsOwner": true,
    "showAccommodationChildEditor": true,
    "showAccountSecurity": true,
    "showAddChild": true,
    "showBilling": true,
    "showCelebrationsChildEditor": true,
    "showExportDelete": true,
    "showFamilyChildActivity": true,
    "showFamilyHome": true,
    "showInlineStudyInvite": true,
    "showLearnThisToo": true,
    "showLearningActions": true,
    "showProgressProfilePicker": true,
    "showRemoveFamilyMember": true,
  },
  "home": {
    "iconName": "Users",
    "screen": "FamilyHome",
    "titleKey": "tabs.children",
  },
  "isFamilyCapable": true,
  "isParentProxy": false,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": true,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": true,
    "home": true,
    "library": false,
    "more/account": true,
    "progress": true,
    "progress/saved": false,
    "recaps": true,
    "session": false,
    "subscription": true,
    "topic/relearn": false,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "family",
    "profileId": "00000000-0000-7000-a000-000000000102",
  },
  "shape": "family",
  "visibleTabs": [
    "home",
    "more",
    "progress",
    "recaps",
  ],
}
`;

exports[`navigation-contract matrix snapshot row-5: Adult owner, family-capable, null intent + profile-default Family 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": true,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": true,
    "home": true,
    "library": false,
    "more/account": true,
    "progress": true,
    "progress/saved": false,
    "recaps": true,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": true,
  },
  "chrome": {
    "modeSwitcher": "global-header",
    "proxyBanner": "hidden",
  },
  "diagnostic": {
    "activeProfileId": "00000000-0000-7000-a000-000000000102",
    "effectiveAppContext": "family",
    "isFamilyCapable": true,
    "isParentProxy": false,
    "linkedChildIds": [
      "00000000-0000-7000-a000-000000000201",
    ],
    "reason": "profile-default-family",
    "role": "owner",
    "shape": "family",
  },
  "effectiveAppContext": "family",
  "gates": {
    "progressScope": "children",
    "sessionIsOwner": true,
    "showAccommodationChildEditor": true,
    "showAccountSecurity": true,
    "showAddChild": true,
    "showBilling": true,
    "showCelebrationsChildEditor": true,
    "showExportDelete": true,
    "showFamilyChildActivity": true,
    "showFamilyHome": true,
    "showInlineStudyInvite": true,
    "showLearnThisToo": true,
    "showLearningActions": true,
    "showProgressProfilePicker": true,
    "showRemoveFamilyMember": true,
  },
  "home": {
    "iconName": "Users",
    "screen": "FamilyHome",
    "titleKey": "tabs.children",
  },
  "isFamilyCapable": true,
  "isParentProxy": false,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": true,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": true,
    "home": true,
    "library": false,
    "more/account": true,
    "progress": true,
    "progress/saved": false,
    "recaps": true,
    "session": false,
    "subscription": true,
    "topic/relearn": false,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "family",
    "profileId": "00000000-0000-7000-a000-000000000102",
  },
  "shape": "family",
  "visibleTabs": [
    "home",
    "more",
    "progress",
    "recaps",
  ],
}
`;

exports[`navigation-contract matrix snapshot row-6: Adult owner, family-capable, null intent + profile-default Study 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "chrome": {
    "modeSwitcher": "global-header",
    "proxyBanner": "hidden",
  },
  "diagnostic": {
    "activeProfileId": "00000000-0000-7000-a000-000000000104",
    "effectiveAppContext": "study",
    "isFamilyCapable": true,
    "isParentProxy": false,
    "linkedChildIds": [
      "00000000-0000-7000-a000-000000000201",
    ],
    "reason": "explicit-study",
    "role": "owner",
    "shape": "study",
  },
  "effectiveAppContext": "study",
  "gates": {
    "progressScope": "self",
    "sessionIsOwner": true,
    "showAccommodationChildEditor": false,
    "showAccountSecurity": true,
    "showAddChild": true,
    "showBilling": true,
    "showCelebrationsChildEditor": false,
    "showExportDelete": true,
    "showFamilyChildActivity": false,
    "showFamilyHome": false,
    "showInlineStudyInvite": true,
    "showLearnThisToo": false,
    "showLearningActions": true,
    "showProgressProfilePicker": false,
    "showRemoveFamilyMember": false,
  },
  "home": {
    "iconName": "School",
    "screen": "LearnerHome",
    "titleKey": "tabs.myLearning",
  },
  "isFamilyCapable": true,
  "isParentProxy": false,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "study",
    "profileId": "00000000-0000-7000-a000-000000000104",
  },
  "shape": "study",
  "visibleTabs": [
    "home",
    "library",
    "more",
    "progress",
  ],
}
`;

exports[`navigation-contract matrix snapshot row-7: Parent proxy active 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": false,
    "progress": true,
    "progress/saved": false,
    "recaps": false,
    "session": false,
    "subscription": false,
    "topic/relearn": false,
    "topic/relearn:{"for":"child"}": false,
  },
  "chrome": {
    "modeSwitcher": "hidden",
    "proxyBanner": "required",
  },
  "diagnostic": {
    "activeProfileId": "00000000-0000-7000-a000-000000000102",
    "effectiveAppContext": "study",
    "isFamilyCapable": true,
    "isParentProxy": true,
    "linkedChildIds": [
      "00000000-0000-7000-a000-000000000201",
    ],
    "reason": "parent-proxy",
    "role": "owner",
    "shape": "study",
  },
  "effectiveAppContext": "study",
  "gates": {
    "progressScope": "self",
    "sessionIsOwner": false,
    "showAccommodationChildEditor": false,
    "showAccountSecurity": false,
    "showAddChild": false,
    "showBilling": false,
    "showCelebrationsChildEditor": false,
    "showExportDelete": false,
    "showFamilyChildActivity": false,
    "showFamilyHome": false,
    "showInlineStudyInvite": false,
    "showLearnThisToo": false,
    "showLearningActions": false,
    "showProgressProfilePicker": false,
    "showRemoveFamilyMember": false,
  },
  "home": {
    "iconName": "School",
    "screen": "LearnerHome",
    "titleKey": "tabs.myLearning",
  },
  "isFamilyCapable": true,
  "isParentProxy": true,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": false,
    "progress": true,
    "progress/saved": false,
    "recaps": false,
    "session": false,
    "subscription": false,
    "topic/relearn": false,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "study",
    "profileId": "00000000-0000-7000-a000-000000000102",
  },
  "shape": "study",
  "visibleTabs": [
    "home",
    "library",
    "progress",
  ],
}
`;

exports[`navigation-contract matrix snapshot row-8: Child profile on shared parent account 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": false,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "chrome": {
    "modeSwitcher": "hidden",
    "proxyBanner": "hidden",
  },
  "diagnostic": {
    "activeProfileId": "00000000-0000-7000-a000-000000000201",
    "effectiveAppContext": "study",
    "isFamilyCapable": false,
    "isParentProxy": false,
    "linkedChildIds": [],
    "reason": "child-study-only",
    "role": "child",
    "shape": "study",
  },
  "effectiveAppContext": "study",
  "gates": {
    "progressScope": "self",
    "sessionIsOwner": false,
    "showAccommodationChildEditor": false,
    "showAccountSecurity": false,
    "showAddChild": false,
    "showBilling": false,
    "showCelebrationsChildEditor": false,
    "showExportDelete": false,
    "showFamilyChildActivity": false,
    "showFamilyHome": false,
    "showInlineStudyInvite": false,
    "showLearnThisToo": false,
    "showLearningActions": true,
    "showProgressProfilePicker": false,
    "showRemoveFamilyMember": false,
  },
  "home": {
    "iconName": "School",
    "screen": "LearnerHome",
    "titleKey": "tabs.myLearning",
  },
  "isFamilyCapable": false,
  "isParentProxy": false,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": false,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "study",
    "profileId": "00000000-0000-7000-a000-000000000201",
  },
  "shape": "study",
  "visibleTabs": [
    "home",
    "library",
    "more",
    "progress",
  ],
}
`;

exports[`navigation-contract matrix snapshot row-9: Solo child owner 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "chrome": {
    "modeSwitcher": "hidden",
    "proxyBanner": "hidden",
  },
  "diagnostic": {
    "activeProfileId": "00000000-0000-7000-a000-000000000202",
    "effectiveAppContext": "study",
    "isFamilyCapable": false,
    "isParentProxy": false,
    "linkedChildIds": [],
    "reason": "explicit-study",
    "role": "owner",
    "shape": "study",
  },
  "effectiveAppContext": "study",
  "gates": {
    "progressScope": "self",
    "sessionIsOwner": true,
    "showAccommodationChildEditor": false,
    "showAccountSecurity": true,
    "showAddChild": false,
    "showBilling": true,
    "showCelebrationsChildEditor": false,
    "showExportDelete": true,
    "showFamilyChildActivity": false,
    "showFamilyHome": false,
    "showInlineStudyInvite": false,
    "showLearnThisToo": false,
    "showLearningActions": true,
    "showProgressProfilePicker": false,
    "showRemoveFamilyMember": false,
  },
  "home": {
    "iconName": "School",
    "screen": "LearnerHome",
    "titleKey": "tabs.myLearning",
  },
  "isFamilyCapable": false,
  "isParentProxy": false,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "study",
    "profileId": "00000000-0000-7000-a000-000000000202",
  },
  "shape": "study",
  "visibleTabs": [
    "home",
    "library",
    "more",
    "progress",
  ],
}
`;

exports[`navigation-contract matrix snapshot row-10: Profile not loaded 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": false,
    "more/account": false,
    "progress": false,
    "progress/saved": false,
    "recaps": false,
    "session": false,
    "subscription": false,
    "topic/relearn": false,
    "topic/relearn:{"for":"child"}": false,
  },
  "chrome": {
    "modeSwitcher": "hidden",
    "proxyBanner": "hidden",
  },
  "diagnostic": {
    "activeProfileId": null,
    "effectiveAppContext": "study",
    "isFamilyCapable": false,
    "isParentProxy": false,
    "linkedChildIds": [],
    "reason": "profile-loading",
    "role": null,
    "shape": "study",
  },
  "effectiveAppContext": "study",
  "gates": {
    "progressScope": "self",
    "sessionIsOwner": false,
    "showAccommodationChildEditor": false,
    "showAccountSecurity": false,
    "showAddChild": false,
    "showBilling": false,
    "showCelebrationsChildEditor": false,
    "showExportDelete": false,
    "showFamilyChildActivity": false,
    "showFamilyHome": false,
    "showInlineStudyInvite": false,
    "showLearnThisToo": false,
    "showLearningActions": true,
    "showProgressProfilePicker": false,
    "showRemoveFamilyMember": false,
  },
  "home": {
    "iconName": "School",
    "screen": "LearnerHome",
    "titleKey": "tabs.myLearning",
  },
  "isFamilyCapable": false,
  "isParentProxy": false,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": false,
    "more/account": false,
    "progress": false,
    "progress/saved": false,
    "recaps": false,
    "session": false,
    "subscription": false,
    "topic/relearn": false,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "study",
    "profileId": null,
  },
  "shape": "study",
  "visibleTabs": [
    "home",
    "library",
    "more",
    "progress",
  ],
}
`;

exports[`navigation-contract matrix snapshot row-v0-flags-off: V0 hard constraint: both flags off, family-capable guardian 1`] = `
{
  "canEnter": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "chrome": {
    "modeSwitcher": "hidden",
    "proxyBanner": "hidden",
  },
  "diagnostic": {
    "activeProfileId": "00000000-0000-7000-a000-000000000105",
    "effectiveAppContext": "study",
    "isFamilyCapable": true,
    "isParentProxy": false,
    "linkedChildIds": [
      "00000000-0000-7000-a000-000000000201",
    ],
    "reason": "legacy-v0-flags-off",
    "role": "owner",
    "shape": "study",
  },
  "effectiveAppContext": "study",
  "gates": {
    "progressScope": "self",
    "sessionIsOwner": true,
    "showAccommodationChildEditor": true,
    "showAccountSecurity": true,
    "showAddChild": true,
    "showBilling": true,
    "showCelebrationsChildEditor": true,
    "showExportDelete": true,
    "showFamilyChildActivity": false,
    "showFamilyHome": true,
    "showInlineStudyInvite": true,
    "showLearnThisToo": false,
    "showLearningActions": true,
    "showProgressProfilePicker": false,
    "showRemoveFamilyMember": true,
  },
  "home": {
    "iconName": "Users",
    "screen": "FamilyHome",
    "titleKey": "tabs.children",
  },
  "isFamilyCapable": true,
  "isParentProxy": false,
  "isSurfaced": {
    "child/[profileId]/curriculum:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "child/[profileId]:{"profileId":"00000000-0000-7000-a000-000000000201"}": false,
    "home": true,
    "library": true,
    "more/account": true,
    "progress": true,
    "progress/saved": true,
    "recaps": false,
    "session": true,
    "subscription": true,
    "topic/relearn": true,
    "topic/relearn:{"for":"child"}": false,
  },
  "queryScope": {
    "appContext": "study",
    "profileId": "00000000-0000-7000-a000-000000000105",
  },
  "shape": "study",
  "visibleTabs": [
    "home",
    "library",
    "more",
    "own-learning",
    "progress",
  ],
}
`;
